--- a/Module_2_Exercise_Law_of_Large_Numbers.ipynb
+++ b/Module_2_Exercise_Law_of_Large_Numbers.ipynb
@@ -86,7 +86,7 @@
         "import numpy as np\n",
         "from numpy.random import randn\n",
         "\n",
-        "N = 100000\n",
+        "N = 100000 # Try to values: 100, 1000, 10000, 100000, 1000000\n",
         "counter = 0\n",
         "for i in randn(N):\n",
         "  if i>-1 and i<1:\n",
