--- a/Module_3_Fundamentals_of_Python.ipynb
+++ b/Module_3_Fundamentals_of_Python.ipynb
@@ -26,6 +26,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "oN_5Ds6NzlsR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Module 3 - Fundamentals of Python\n",
+        "\n",
+        "1. Lists\n",
+        "2. Using the [] brackets\n",
+        "3. Slicing\n",
+        "4. Tuples\n",
+        "5. Functions\n",
+        "6. Packages\n",
+        "7. Numpy and Arrays\n",
+        "8. Slicing Arrays"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "eKwAP-cKoGeF",
         "colab_type": "text"
       },
