--- a/Module_2_Core_Programming_Principles.ipynb
+++ b/Module_2_Core_Programming_Principles.ipynb
@@ -26,6 +26,23 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "8-54BoH10Hc5",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Module 2 - Core Programming Principles\n",
+        "\n",
+        "1. Types of Variables\n",
+        "2. Using Variables\n",
+        "3. Boolean Variables and Operators\n",
+        "4. The While Loop\n",
+        "5. The For Loop\n",
+        "6. The IF Statement"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "JSnui02hcXa-",
         "colab_type": "text"
       },
@@ -52,16 +69,16 @@
       "metadata": {
         "id": "-LMyY-AYcdIs",
         "colab_type": "code",
+        "outputId": "cd1c6f8f-60cc-4810-8ebe-ef8c4d95c9c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cd1c6f8f-60cc-4810-8ebe-ef8c4d95c9c1"
+        }
       },
       "source": [
         "x"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,16 +99,16 @@
       "metadata": {
         "id": "K9hmkFITciuE",
         "colab_type": "code",
+        "outputId": "cd560ea8-8600-4ad6-fbeb-843a26bef361",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cd560ea8-8600-4ad6-fbeb-843a26bef361"
+        }
       },
       "source": [
         "type(x)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,16 +153,16 @@
       "metadata": {
         "id": "ffl1T8vRcwsh",
         "colab_type": "code",
+        "outputId": "008339f3-a2ab-47b7-9dab-3e509011c5a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "008339f3-a2ab-47b7-9dab-3e509011c5a5"
+        }
       },
       "source": [
         "y"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,16 +183,16 @@
       "metadata": {
         "id": "Ja_bkQqCcxN1",
         "colab_type": "code",
+        "outputId": "11ea18ba-3faa-464e-9b65-6d7d55b7a81f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "11ea18ba-3faa-464e-9b65-6d7d55b7a81f"
+        }
       },
       "source": [
         "type(y)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,16 +237,16 @@
       "metadata": {
         "id": "TNtG2qvsdB9t",
         "colab_type": "code",
+        "outputId": "c38719f2-f6e4-480d-e422-a3d12bf55477",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c38719f2-f6e4-480d-e422-a3d12bf55477"
+        }
       },
       "source": [
         "a"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -250,16 +267,16 @@
       "metadata": {
         "id": "AazzDeG6dCT2",
         "colab_type": "code",
+        "outputId": "cf33dcda-114c-4859-a914-87af61485eeb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cf33dcda-114c-4859-a914-87af61485eeb"
+        }
       },
       "source": [
         "type(a)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,16 +321,16 @@
       "metadata": {
         "id": "BOjZ_EZ8dSXc",
         "colab_type": "code",
+        "outputId": "ef61ea19-2509-46a2-8567-d8700ffb29ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ef61ea19-2509-46a2-8567-d8700ffb29ae"
+        }
       },
       "source": [
         "q1"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -334,16 +351,16 @@
       "metadata": {
         "id": "M3jceIxrdTGn",
         "colab_type": "code",
+        "outputId": "57a36ec3-197d-4c37-b790-ee71d73cb728",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "57a36ec3-197d-4c37-b790-ee71d73cb728"
+        }
       },
       "source": [
         "type(q1)"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,18 +489,18 @@
       "metadata": {
         "id": "SOj-eup_ew29",
         "colab_type": "code",
+        "outputId": "dc8e44e6-29d5-46f6-ef6f-fe39023d45c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dc8e44e6-29d5-46f6-ef6f-fe39023d45c6"
+        }
       },
       "source": [
         "# Printing\n",
         "C \n",
         "D # This line overrides the above line C"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,18 +521,18 @@
       "metadata": {
         "id": "I5BayTNPebg7",
         "colab_type": "code",
+        "outputId": "7e8621be-febd-4027-8209-8678c1127a0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "7e8621be-febd-4027-8209-8678c1127a0d"
+        }
       },
       "source": [
         "# Printing\n",
         "print(C)\n",
         "print(D)"
       ],
-      "execution_count": 24,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,17 +559,17 @@
       "metadata": {
         "id": "vrLZqGfve6Gd",
         "colab_type": "code",
+        "outputId": "f411adff-72b7-45a7-8461-b67d38aaaa35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f411adff-72b7-45a7-8461-b67d38aaaa35"
+        }
       },
       "source": [
         "import math\n",
         "math.sqrt(A)"
       ],
-      "execution_count": 25,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -573,16 +590,16 @@
       "metadata": {
         "id": "hYxWTtqTeknA",
         "colab_type": "code",
+        "outputId": "df487ea5-4cbd-4570-e89d-6c43cccc0a6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "df487ea5-4cbd-4570-e89d-6c43cccc0a6a"
+        }
       },
       "source": [
         "round(math.sqrt(A))"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,16 +657,16 @@
       "metadata": {
         "id": "ujHjqimkfPgm",
         "colab_type": "code",
+        "outputId": "3afdae5e-cc8b-44aa-bfb8-f5f346de89c2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "3afdae5e-cc8b-44aa-bfb8-f5f346de89c2"
+        }
       },
       "source": [
         "print(message)"
       ],
-      "execution_count": 29,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -713,16 +730,16 @@
       "metadata": {
         "id": "SvTYvHCAfrvb",
         "colab_type": "code",
+        "outputId": "d5020f5a-0878-4c57-adcb-644eb0b00ec8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d5020f5a-0878-4c57-adcb-644eb0b00ec8"
+        }
       },
       "source": [
         "4<5"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,16 +760,16 @@
       "metadata": {
         "id": "jw2g7P3Vfsl_",
         "colab_type": "code",
+        "outputId": "b8d267b3-eccf-4376-b993-27dd31de8910",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "b8d267b3-eccf-4376-b993-27dd31de8910"
+        }
       },
       "source": [
         "10>100"
       ],
-      "execution_count": 32,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,16 +790,16 @@
       "metadata": {
         "id": "V_milR96fts9",
         "colab_type": "code",
+        "outputId": "2c1cd43a-45ba-4571-ee9e-b2ff5fec425c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2c1cd43a-45ba-4571-ee9e-b2ff5fec425c"
+        }
       },
       "source": [
         "4 == 5"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,16 +874,16 @@
       "metadata": {
         "id": "bmGLplAzgAYG",
         "colab_type": "code",
+        "outputId": "f2630530-b5a2-4788-e710-938b2e047608",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "f2630530-b5a2-4788-e710-938b2e047608"
+        }
       },
       "source": [
         "result"
       ],
-      "execution_count": 36,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -887,16 +904,16 @@
       "metadata": {
         "id": "Mp28zWuCgBLv",
         "colab_type": "code",
+        "outputId": "9477a206-3f2c-4b1e-ffcb-3dac30acf442",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9477a206-3f2c-4b1e-ffcb-3dac30acf442"
+        }
       },
       "source": [
         "type(result)"
       ],
-      "execution_count": 37,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -940,16 +957,16 @@
       "metadata": {
         "id": "1jbBjmWwgJII",
         "colab_type": "code",
+        "outputId": "80917b84-55c6-47f8-ea70-bd046a1e4b71",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "80917b84-55c6-47f8-ea70-bd046a1e4b71"
+        }
       },
       "source": [
         "result2"
       ],
-      "execution_count": 39,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,16 +987,16 @@
       "metadata": {
         "id": "vvT9auOBgJ9m",
         "colab_type": "code",
+        "outputId": "ac123bc0-80f2-4398-bcae-b23b1089c53b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "ac123bc0-80f2-4398-bcae-b23b1089c53b"
+        }
       },
       "source": [
         "type(result2)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1010,16 +1027,16 @@
       "metadata": {
         "id": "IHoM7qD5gK7Z",
         "colab_type": "code",
+        "outputId": "cb045bd8-90a6-4378-ec60-0e54113761ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "cb045bd8-90a6-4378-ec60-0e54113761ed"
+        }
       },
       "source": [
         "result or result2"
       ],
-      "execution_count": 41,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1040,16 +1057,16 @@
       "metadata": {
         "id": "HPu1PhBggRM8",
         "colab_type": "code",
+        "outputId": "2ce174a3-b580-4d71-cb9e-92eec44cc034",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2ce174a3-b580-4d71-cb9e-92eec44cc034"
+        }
       },
       "source": [
         "result and result2"
       ],
-      "execution_count": 42,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1093,11 +1110,11 @@
       "metadata": {
         "id": "GLF7-Fa5glWB",
         "colab_type": "code",
+        "outputId": "7e4dea75-05c4-4a12-e791-28a8a1a95611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "7e4dea75-05c4-4a12-e791-28a8a1a95611"
+        }
       },
       "source": [
         "counter = 0\n",
@@ -1106,7 +1123,7 @@
         "  counter = counter + 1\n",
         "print('Done')"
       ],
-      "execution_count": 44,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1142,17 +1159,17 @@
       "metadata": {
         "id": "BncStWo1g8QV",
         "colab_type": "code",
+        "outputId": "41a607d7-714b-4596-cb84-0f810621f155",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "41a607d7-714b-4596-cb84-0f810621f155"
+        }
       },
       "source": [
         "for i in range(5):\n",
         "  print(\"hello python\")"
       ],
-      "execution_count": 45,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1182,16 +1199,16 @@
       "metadata": {
         "id": "Rmp4cl9DhQX3",
         "colab_type": "code",
+        "outputId": "c1cf7d39-76b3-4928-8386-2137aa666856",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c1cf7d39-76b3-4928-8386-2137aa666856"
+        }
       },
       "source": [
         "range(5)"
       ],
-      "execution_count": 46,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1212,16 +1229,16 @@
       "metadata": {
         "id": "GZVbOsnchSAs",
         "colab_type": "code",
+        "outputId": "09cf15be-6f92-4bf2-fbcd-98aaa8bd7bf7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "09cf15be-6f92-4bf2-fbcd-98aaa8bd7bf7"
+        }
       },
       "source": [
         "list(range(5))"
       ],
-      "execution_count": 47,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1252,17 +1269,17 @@
       "metadata": {
         "id": "P4Syh6v5hTZn",
         "colab_type": "code",
+        "outputId": "b4849acf-79a0-48d1-f1af-ae524baaf2c6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "b4849acf-79a0-48d1-f1af-ae524baaf2c6"
+        }
       },
       "source": [
         "for i in range(5):\n",
         "  print('Hello python: ',i)"
       ],
-      "execution_count": 48,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,16 +1323,16 @@
       "metadata": {
         "id": "neyS3uRAhwFL",
         "colab_type": "code",
+        "outputId": "facad110-79eb-4a24-fca6-ee21ece88308",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "facad110-79eb-4a24-fca6-ee21ece88308"
+        }
       },
       "source": [
         "mylist"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1336,17 +1353,17 @@
       "metadata": {
         "id": "J-Xn2SS8hwwB",
         "colab_type": "code",
+        "outputId": "11aec579-ad4f-4f82-be16-ff5351c06f51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "11aec579-ad4f-4f82-be16-ff5351c06f51"
+        }
       },
       "source": [
         "for j in mylist:\n",
         "  print(\"j is equal to : \",j)"
       ],
-      "execution_count": 51,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1401,16 +1418,16 @@
       "metadata": {
         "id": "Q8W8lp_MiM_9",
         "colab_type": "code",
+        "outputId": "4e6854bb-afc9-4a2a-b4f1-69ee481921ec",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4e6854bb-afc9-4a2a-b4f1-69ee481921ec"
+        }
       },
       "source": [
         "randn()"
       ],
-      "execution_count": 60,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1441,11 +1458,11 @@
       "metadata": {
         "id": "vLbNJRuYiSbb",
         "colab_type": "code",
+        "outputId": "f878a7ac-4f0e-4f58-d340-93cc349b301a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "f878a7ac-4f0e-4f58-d340-93cc349b301a"
+        }
       },
       "source": [
         "#---- -2 ---- -1 ---- 0 ---- 1 ---- 2 ----\n",
@@ -1458,7 +1475,7 @@
         "print(x)\n",
         "print(answer)"
       ],
-      "execution_count": 76,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1485,11 +1502,11 @@
       "metadata": {
         "id": "IQX6g_EYimeP",
         "colab_type": "code",
+        "outputId": "bfb73c28-12d6-445e-f890-83a7e9e82d41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "bfb73c28-12d6-445e-f890-83a7e9e82d41"
+        }
       },
       "source": [
         "#---- -2 ---- -1 ---- 0 ---- 1 ---- 2 ----\n",
@@ -1506,7 +1523,7 @@
         "print(x)\n",
         "print(answer)"
       ],
-      "execution_count": 84,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1533,11 +1550,11 @@
       "metadata": {
         "id": "AGpWCFPVjpJS",
         "colab_type": "code",
+        "outputId": "22be8f17-c5fa-4c79-9533-09286d370ca6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "22be8f17-c5fa-4c79-9533-09286d370ca6"
+        }
       },
       "source": [
         "#---- -2 ---- -1 ---- 0 ---- 1 ---- 2 ----\n",
@@ -1553,7 +1570,7 @@
         "print(x)\n",
         "print(answer)"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
