--- a/Module_2_Exercise_Law_of_Large_Numbers.ipynb
+++ b/Module_2_Exercise_Law_of_Large_Numbers.ipynb
@@ -30,7 +30,10 @@
         "colab_type": "text"
       },
       "source": [
-        "## Module 2 - Homework and Solution"
+        "## Module 2 - Homework and Solution\n",
+        "\n",
+        "---\n",
+        "\n"
       ]
     },
     {
@@ -76,11 +79,11 @@
       "metadata": {
         "id": "By8MbcA0k7Kg",
         "colab_type": "code",
+        "outputId": "9059a968-a2c4-4ca1-99a1-7c8d8a739f09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9059a968-a2c4-4ca1-99a1-7c8d8a739f09"
+        }
       },
       "source": [
         "import numpy as np\n",
@@ -93,7 +96,7 @@
         "    counter = counter + 1\n",
         "counter/N"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
