--- a/Module_2_Core_Programming_Principles.ipynb
+++ b/Module_2_Core_Programming_Principles.ipynb
@@ -37,7 +37,8 @@
         "3. Boolean Variables and Operators\n",
         "4. The While Loop\n",
         "5. The For Loop\n",
-        "6. The IF Statement"
+        "6. The IF Statement\n",
+        "7. Exercise"
       ]
     },
     {
@@ -1581,6 +1582,95 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ygbXr4Bk4Xfy",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Excercise - Law of Large Numbers"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ve-0yCGd4iH7",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Exercise Question\n",
+        "\n",
+        "Test the Law of Large Numbers for N random normally distributed numbers with mean = 0, stdev = 1:\n",
+        "\n",
+        "Create a Python script that will count how many of these numbers fall between -1 and 1 and dividde by the total quantity of N\n",
+        "\n",
+        "You know the E(X) = 68.2%\n",
+        "\n",
+        "Check the Mean (Xn) -> E(X) as you rerun your script while increasing N"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Exqre8L94knT",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Excercise Solution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B6ror8rW4fYa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6f98f64f-57eb-415b-c395-8e079f2727f1"
+      },
+      "source": [
+        "import numpy as np\n",
+        "from numpy.random import randn\n",
+        "\n",
+        "N = 100000 # Try to values: 100, 1000, 10000, 100000, 1000000\n",
+        "counter = 0\n",
+        "for i in randn(N):\n",
+        "  if i>-1 and i<1:\n",
+        "    counter = counter + 1\n",
+        "counter/N"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.68401"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0RYzWIHg4sTu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
