--- a/Module_3_Fundamentals_of_Python.ipynb
+++ b/Module_3_Fundamentals_of_Python.ipynb
@@ -1982,6 +1982,440 @@
       "metadata": {
         "id": "wKt3oJDv3-ge",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "f1f692d5-e4c5-460f-8e2c-542f39198ea3"
+      },
+      "source": [
+        "# Calculate profit (revenue - expenses)\n",
+        "profit = list([])\n",
+        "\n",
+        "for i in range(0,len(revenue)):\n",
+        "  profit.append(revenue[i] - expenses[i])\n",
+        "profit"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2522.67,\n",
+              " 1911.3900000000003,\n",
+              " -3707.790000000001,\n",
+              " -2914.3099999999995,\n",
+              " -599.9200000000001,\n",
+              " 7265.24,\n",
+              " 8210.550000000001,\n",
+              " 3944.9700000000003,\n",
+              " 3328.3899999999994,\n",
+              " -2238.6500000000015,\n",
+              " 659.5999999999985,\n",
+              " 11629.54]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cyu7D_uM53r6",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "d0f6c165-6cef-4b03-ef05-d482870b631f"
+      },
+      "source": [
+        "# Calculate tax (profit * 30%)\n",
+        "tax = [round(i*0.3,2) for i in profit]\n",
+        "tax"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[756.8,\n",
+              " 573.42,\n",
+              " -1112.34,\n",
+              " -874.29,\n",
+              " -179.98,\n",
+              " 2179.57,\n",
+              " 2463.17,\n",
+              " 1183.49,\n",
+              " 998.52,\n",
+              " -671.6,\n",
+              " 197.88,\n",
+              " 3488.86]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "k7EKLysX6VnW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "9e2bc2d9-5ae8-4c25-dd93-ff8935c3ac49"
+      },
+      "source": [
+        "# Profit after tax\n",
+        "profit_after_tax = list([])\n",
+        "\n",
+        "for i in range(0,len(profit)):\n",
+        "  profit_after_tax.append(profit[i]-tax[i])\n",
+        "profit_after_tax"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1765.8700000000001,\n",
+              " 1337.9700000000003,\n",
+              " -2595.4500000000007,\n",
+              " -2040.0199999999995,\n",
+              " -419.94000000000005,\n",
+              " 5085.67,\n",
+              " 5747.380000000001,\n",
+              " 2761.4800000000005,\n",
+              " 2329.8699999999994,\n",
+              " -1567.0500000000015,\n",
+              " 461.71999999999855,\n",
+              " 8140.68]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cQnXDNB06t6i",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "136ea823-58c8-455f-9c22-08647aa1da53"
+      },
+      "source": [
+        "# Profit margin after tax\n",
+        "profit_margin = list([])\n",
+        "for i in range(0,len(profit)):\n",
+        "  profit_margin.append(profit_after_tax[i]/revenue[i])\n",
+        "profit_margin = [round((i*100),2) for i in profit_margin]\n",
+        "profit_margin"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[12.12,\n",
+              " 17.59,\n",
+              " -30.14,\n",
+              " -22.23,\n",
+              " -5.21,\n",
+              " 62.74,\n",
+              " 49.99,\n",
+              " 28.28,\n",
+              " 22.61,\n",
+              " -10.9,\n",
+              " 4.31,\n",
+              " 52.75]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BoYCp1P87I8Q",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "19e865cc-dc25-45d1-9864-224ba0af39f7"
+      },
+      "source": [
+        "# Profit After Tax Mean\n",
+        "\n",
+        "mean_pat = sum(profit_after_tax)/len(profit_after_tax)\n",
+        "mean_pat"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1750.6816666666666"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fRmHmnpV7tzS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "80e8551c-18d5-49eb-cd86-4ce862d434a7"
+      },
+      "source": [
+        "good_months = list([])\n",
+        "for i in range(0,len(profit)):\n",
+        "  good_months.append(profit_after_tax[i] > mean_pat)\n",
+        "good_months"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[True, False, False, False, False, True, True, True, True, False, False, True]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ymh8bU-e8CUU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "a610ae73-f900-437f-e044-2b3af3cc04d2"
+      },
+      "source": [
+        "bad_months = list([])\n",
+        "for i in range(0,len(profit)):\n",
+        "  bad_months.append(profit_after_tax[i] < mean_pat)\n",
+        "bad_months"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False, True, True, True, True, False, False, False, False, True, True, False]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bkS7Wpx48Q_e",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "0c618108-a6e0-4baa-a038-26499f76a3c8"
+      },
+      "source": [
+        "best_month = list([])\n",
+        "for i in range(0,len(profit)):\n",
+        "  best_month.append(profit_after_tax[i] == max(profit_after_tax))\n",
+        "best_month"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " True]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "W2xcRTy-8wgZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 221
+        },
+        "outputId": "4f6ca05f-8e7b-4b2c-b2a1-3670a626691b"
+      },
+      "source": [
+        "worst_month = list([])\n",
+        "for i in range(0,len(profit)):\n",
+        "  worst_month.append(profit_after_tax[i] == min(profit_after_tax))\n",
+        "worst_month"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[False,\n",
+              " False,\n",
+              " True,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False,\n",
+              " False]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eeu3f8SF86aL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Convert all calculations to units of one thousand dollars\n",
+        "\n",
+        "revenue_1000 = [round(i/1000,2) for i in revenue]\n",
+        "expenses_1000 = [round(i/1000,2) for i in expenses]\n",
+        "profit_1000 = [round(i/1000,2) for i in profit]\n",
+        "profit_after_tax_1000 = [round(i/1000,2) for i in profit_after_tax]\n",
+        "\n",
+        "revenue_1000 = [int(i) for i in revenue_1000]\n",
+        "expenses_1000 = [int(i) for i in expenses_1000]\n",
+        "profit_1000 = [int(i) for i in profit_1000]\n",
+        "profit_after_tax_1000 = [int(i) for i in profit_after_tax_1000]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ytL-oasm9zD-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 190
+        },
+        "outputId": "41ccf3f3-2c5e-4da1-fcb3-3cf3f431d502"
+      },
+      "source": [
+        "# Print Results\n",
+        "\n",
+        "print(\"Revenue: \",revenue_1000)\n",
+        "print(\"Expenses: \",expenses_1000)\n",
+        "print(\"Profit: \",profit_1000)\n",
+        "print(\"Profit After Tax: \",profit_after_tax_1000)\n",
+        "print(\"Profit Margin: \",profit_margin)\n",
+        "print(\"Good Months: \",good_months)\n",
+        "print(\"Bad Months: \",bad_months)\n",
+        "print(\"Best Month: \",best_month)\n",
+        "print(\"Worst Month: \",worst_month)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Revenue:  [14, 7, 8, 9, 8, 8, 11, 9, 10, 14, 10, 15]\n",
+            "Expenses:  [12, 5, 12, 12, 8, 0, 3, 5, 6, 16, 10, 3]\n",
+            "Profit:  [2, 1, -3, -2, 0, 7, 8, 3, 3, -2, 0, 11]\n",
+            "Profit After Tax:  [1, 1, -2, -2, 0, 5, 5, 2, 2, -1, 0, 8]\n",
+            "Profit Margin:  [12.12, 17.59, -30.14, -22.23, -5.21, 62.74, 49.99, 28.28, 22.61, -10.9, 4.31, 52.75]\n",
+            "Good Months:  [True, False, False, False, False, True, True, True, True, False, False, True]\n",
+            "Bad Months:  [False, True, True, True, True, False, False, False, False, True, True, False]\n",
+            "Best Month:  [False, False, False, False, False, False, False, False, False, False, False, True]\n",
+            "Worst Month:  [False, False, True, False, False, False, False, False, False, False, False, False]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HiP0XTCb-Cqr",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
