Check for Errors

--- a/Module_6_Advanced_Visualization.ipynb
+++ b/Module_6_Advanced_Visualization.ipynb
@@ -320,8 +320,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -331,7 +331,6 @@
     "id": "o05-XET3Stwm",
     "outputId": "554a85e6-f4f3-4cce-9d76-421f9a2b8b25"
    },
-   "outputs": [],
    "source": [
     "# JointPlots\n",
     "j = sns.jointplot(data = movies, x = 'CriticRating',y = 'AudienceRating')"
@@ -643,9 +642,7 @@
    },
    "outputs": [],
    "source": [
-    "vis1 = sns.lmplot(data=movies,x='CriticRating',y='AudienceRating',\\\n",
-    "                  fit_reg=False,hue='Genre', \\\n",
-    "                  size=7,aspect = 1)"
+    "vis1 = sns.lmplot(data=movies,x='CriticRating',y='AudienceRating',fit_reg=False,hue='Genre',aspect = 1)"
    ]
   },
   {
@@ -662,10 +659,12 @@
    },
    "outputs": [],
    "source": [
-    "k1 = sns.kdeplot(movies.CriticRating,movies.AudienceRating, \\\n",
-    "                 shade = True,shade_lowest=False,cmap = 'Reds')\n",
+    "#k1 = sns.kdeplot(movies.CriticRating,movies.AudienceRating,cmap = 'Reds')\n",
+    "k1 = sns.kdeplot(movies.CriticRating, movies.AudienceRating, shade=True, \n",
+    "    cbar=True, shade_lowest=False, cmap='Reds')\n",
     "\n",
     "#Tip:\n",
+    "#,shade_lowest=False, shade = True\n",
     "#k1b = sns.kdeplot(movies.CriticRating,movies.AudienceRating, cmap = 'Reds')"
    ]
   },
